refactoring test