@@ -105,14 +105,14 @@ public class ProcessZaehldatenZeitreiheTest {
         final LadeZaehldatenZeitreiheDTO ladeZaehldatenZeitreiheDTO1 = new LadeZaehldatenZeitreiheDTO();
         ProcessZaehldatenZeitreiheService.fillLadeZaehldatenZeitreiheDTO(options, ladeZaehldatenZeitreiheDTO1,
                 ladeZaehldatumDTO);
-        assertThat(ladeZaehldatenZeitreiheDTO1.getKfz().get(0), is(new BigDecimal(200)));
-        assertThat(ladeZaehldatenZeitreiheDTO1.getSv().get(0), is(new BigDecimal(75)));
-        assertThat(ladeZaehldatenZeitreiheDTO1.getGv().get(0), is(new BigDecimal(70)));
-        assertThat(ladeZaehldatenZeitreiheDTO1.getFuss().get(0), is(45));
-        assertThat(ladeZaehldatenZeitreiheDTO1.getRad().get(0), is(40));
-        assertThat(ladeZaehldatenZeitreiheDTO1.getGesamt().get(0), is(new BigDecimal(285)));
-        assertThat(ladeZaehldatenZeitreiheDTO1.getSvAnteilInProzent().get(0), is(BigDecimal.valueOf(37.5)));
-        assertThat(ladeZaehldatenZeitreiheDTO1.getGvAnteilInProzent().get(0), is(BigDecimal.valueOf(35.0)));
+        assertThat(ladeZaehldatenZeitreiheDTO1.getKfz().getFirst(), is(new BigDecimal(200)));
+        assertThat(ladeZaehldatenZeitreiheDTO1.getSv().getFirst(), is(new BigDecimal(75)));
+        assertThat(ladeZaehldatenZeitreiheDTO1.getGv().getFirst(), is(new BigDecimal(70)));
+        assertThat(ladeZaehldatenZeitreiheDTO1.getFuss().getFirst(), is(45));
+        assertThat(ladeZaehldatenZeitreiheDTO1.getRad().getFirst(), is(40));
+        assertThat(ladeZaehldatenZeitreiheDTO1.getGesamt().getFirst(), is(new BigDecimal(285)));
+        assertThat(ladeZaehldatenZeitreiheDTO1.getSvAnteilInProzent().getFirst(), is(BigDecimal.valueOf(37.5)));
+        assertThat(ladeZaehldatenZeitreiheDTO1.getGvAnteilInProzent().getFirst(), is(BigDecimal.valueOf(35.0)));
 
         options.setKraftfahrzeugverkehr(false);
         options.setSchwerverkehr(false);
@@ -129,7 +129,7 @@ public class ProcessZaehldatenZeitreiheTest {
         assertThat(ladeZaehldatenZeitreiheDTO2.getGv().size(), is(0));
         assertThat(ladeZaehldatenZeitreiheDTO2.getFuss().size(), is(0));
         assertThat(ladeZaehldatenZeitreiheDTO2.getRad().size(), is(0));
-        assertThat(ladeZaehldatenZeitreiheDTO2.getGesamt().get(0), is(new BigDecimal(285)));
+        assertThat(ladeZaehldatenZeitreiheDTO2.getGesamt().getFirst(), is(new BigDecimal(285)));
         assertThat(ladeZaehldatenZeitreiheDTO2.getSvAnteilInProzent().size(), is(0));
     }
 
